--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "calc",
   "private": true,
   "version": "0.0.1",
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "dev": "vite",
